Add ingot and recipes for blocks

--- a/src/main/resources/assets/metalus/lang/en_us.json
+++ b/src/main/resources/assets/metalus/lang/en_us.json
@@ -3,5 +3,7 @@
   "block.metalus.test_block": "Test Block",
   "block.metalus.block_metal_tin": "Block of Tin",
   "block.metalus.block_metal_copper": "Block of Copper",
-  "item.metalus.debug_tool": "Debug Tool"
+  "item.metalus.debug_tool": "Debug Tool",
+  "item.metalus.ingot_metal_copper": "Copper Ingot",
+  "item.metalus.ingot_metal_tin": "Tin Ingot"
 }
