Whole bunch of changes, add base fluid and Tile Entity systems.

--- a/src/main/resources/assets/metalus/lang/en_us.json
+++ b/src/main/resources/assets/metalus/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "itemGroup.metalus": "Metalus Things",
+  "itemGroup.metalus": "Metalus",
   "block.metalus.test_block": "Test Block",
   "block.metalus.block_metal_tin": "Block of Tin",
   "block.metalus.block_metal_copper": "Block of Copper",
